add in some real ids

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <a href="https://wiki.mozilla.org/Add-ons/developer/communication">our team is here to help</a>.
       </p>
     </div>
-    <script type="text/javascript" src="script.js">
-    </script>
+    <script type="text/javascript" src="data.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
