guid could also be an email address

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li>In the <code>id</code> of the <code>package.json</code> for an SDK add-on</li>
           <li>On <a href="https://addons.mozilla.org">addons.mozilla.org</a>, go to <code>Tools</code> &gt; <code>Manage My Submissions</code> &gt; and select the add-on, then scroll down to <code>Technical Details</code></li>
         </ul>
-        Your add-on guid should look something like this: {F33233B3-EDB1-41f4-8482-917AB190E647}
+        Your add-on guid should either be an email address, or something that looks like this: {F33233B3-EDB1-41f4-8482-917AB190E647}
       </p>
 
       <form class="form-inline">
