--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       </div>
 
       <div class="answer alert alert-warning" role="alert" id="sdk" style="display: none">
-        <h3>SDK add-on that is not compatible with e10s</h3>
+        <h3>SDK add-on using low level APIs</h3>
         <p>
-            We think this is an SDK add-on that uses low level APIs that will break with Multi-process Firefox (aka Electrolysis or e10s).
-            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication#1.29_Has_SDK_add-on_that_will_break_with_e10s">More Information</a>
+            We think this is an SDK add-on that uses <a href="https://developer.mozilla.org/Add-ons/SDK/Low-Level_APIs">low level APIs</a> that will break with Multi-process Firefox (aka Electrolysis or e10s).
+            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication#1.29_Has_SDK_add-on_using_low_level_APIs">More Information</a>
         </p>
       </div>
 
@@ -54,7 +54,8 @@
       <div class="answer alert alert-warning" role="alert" id="sdk-high" style="display: none">
         <h3>SDK add-on using high level APIs</h3>
         <p>
-            We think this is an SDK add-on using high level SDK APIs. Your add-on will probably continue to work without problems, but we recommend you start looking into WebExtensions.
+            We think this is an SDK add-on using <a href="https://developer.mozilla.org/Add-ons/SDK/High-Level_APIs">high level APIs</a>. Your add-on will probably continue to work without problems, but we recommend you start looking into WebExtensions.<br><br>
+            Also, please note that as of March 2016, SDK add-ons that were built using the cfx tool (Jetpack version 1.17 and lower) need to be repackaged using the <a href="https://developer.mozilla.org/Add-ons/SDK/Tools/cfx_to_jpm">newer jpm tool</a> in order to continue being compatible with Firefox.<br><br>
             <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication#3.29_Has_SDK_add-on_using_only_high_level_SDKs">More Information</a>
         </p>
       </div>
