--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
       <p>You will need your <b>add-on guid</b>, which is found in the following places:
         <ul>
           <li>In the <code>&lt;em:id&gt;</code> of <code>install.rdf</code> of your add-on</li>
-          <li>In the <code>id</code> of the <code>package.json</code> for an SDK add-on</li>
+          <li>In the <code>name</code> (add an <code>@</code> prefix) or <code>id</code> of the <code>package.json</code> for an SDK add-on</li>
           <li>On <a href="https://addons.mozilla.org" target="_blank">addons.mozilla.org</a>, go to <code>Tools</code> &gt; <code>Manage My Submissions</code> &gt; and select the add-on, then scroll down to <code>Technical Details</code></li>
         </ul>
-        Your add-on guid should either be an email address, or something that looks like this: {F33233B3-EDB1-41f4-8482-917AB190E647}
+        Your add-on guid should be one of the following:
+        <ul>
+          <li>an email address</li>
+          <li>an <code>@addon-name</code></li>
+          <li>a string that looks like <code>{F33233B3-EDB1-41f4-8482-917AB190E647}</code></li>
+        </ul>
       </p>
 
       <form class="form-inline">
