--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li>In the <code>&lt;em:id&gt;</code> of <code>install.rdf</code> of your add-on</li>
         <li>In the <code>name</code> (add an <code>@</code> prefix) or <code>id</code> of the <code>package.json</code> for an SDK add-on</li>
-        <li>On <a href="https://addons.mozilla.org" target="_blank">addons.mozilla.org</a>, go to <code>Tools</code> &gt; <code>Manage My Submissions</code> &gt; and select the add-on, then scroll down to <code>Technical Details</code></li>
+        <li>On <a href="https://addons.mozilla.org" target="_blank">addons.mozilla.org</a>, go to <code>Tools</code> &gt; <code>Manage My Submissions</code> and select the add-on, then scroll down to <code>Technical Details</code></li>
       </ul>
       <p>Your add-on guid should be one of the following:</p>
       <ul>
