--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add-on Lookup Tool</title>
+    <title>Firefox Add-on Migration Lookup</title>
   </head>
   <body>
     <div class="container">
@@ -13,9 +13,9 @@
         <p>Requires Firefox, Chrome or Opera. Because it uses <a href="https://developer.mozilla.org/en-US/docs/Web/API/TextEncoder/encode">TextEncoder</a>.</p>
       </div>
 
-<p><a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions" target="_blank">WebExtensions</a> are becoming the standard for add-on development in Firefox. It will be the only type of add-on supported in Firefox by the end of 2017.</p>
+<p><a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions" target="_blank">WebExtensions</a> are becoming the standard for add-on development in Firefox. It will be the only type of extension supported in Firefox by the end of 2017.</p>
 
-      <p>The tool below will tell you which technology your add-on uses and recommend some resources for porting to WebExtensions. A full list of resources are <a href="https://wiki.mozilla.org/Add-ons/developer/communication" target="_blank">linked here</a> to help you through the transition.</p>
+      <p>We've compiled a <a href="https://wiki.mozilla.org/Add-ons/developer/communication" target="_blank">list of resources</a> to help you through the transition.</p>
 
       <p>You will need your <b>add-on guid</b>, which is found in one of the following places:</p>
       <ul>
@@ -42,37 +42,37 @@
 
       <div class="answer alert alert-danger" role="alert" id="nope" style="display: none">
          <h3>Sorry</h3>
-         <p>This is not a valid add-on ID. This is the ID of an application, such as Firefox or Thunderbird. Please take another look at your install.rdf file and try again!</p>
+         <p>This is not a valid add-on ID. This is the ID of an application, such as Firefox or Thunderbird.</p>
       </div>
 
       <div class="answer alert alert-warning" role="alert" id="sdk" style="display: none">
         <h3>SDK add-on</h3>
         <p>
-            We think this is an SDK add-on. Please take a look at the comparison chart showing <a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Comparison_with_the_Add-on_SDK" target="_blank">SDK APIs and their WebExtensions counterparts</a>. If you don't see the APIs you need to port to WebExtensions, please click the "More Information" link below to see more options.
-            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication">More Information</a>
+            We think this is an SDK add-on. Please take a look at the comparison chart showing <a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Comparison_with_the_Add-on_SDK" target="_blank">SDK APIs and their WebExtensions counterparts</a>. If you don't see the APIs you need to port to WebExtensions, our <a href="https://wiki.mozilla.org/Add-ons/developer/communication#Don.27t_See_the_WebExtensions_APIs_You_Need.3F" target="_blank">wiki page</a> provides more information.
+            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication#Don.27t_See_the_WebExtensions_APIs_You_Need.3F">Go there now</a>
         </p>
       </div>
 
       <div class="answer alert alert-warning" role="alert" id="sdk-legacy" style="display: none">
         <h3>SDK add-on</h3>
         <p>
-            We think this is an SDK add-on. Please take a look at the comparison chart showing <a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Comparison_with_the_Add-on_SDK" target="_blank">SDK APIs and their WebExtensions counterparts</a>. If you don't see the APIs you need to port to WebExtensions, please click the "More Information" link below to see more options.
-            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication">More Information</a>
+            We think this is an SDK add-on. Please take a look at the comparison chart showing <a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Comparison_with_the_Add-on_SDK" target="_blank">SDK APIs and their WebExtensions counterparts</a>. If you don't see the APIs you need to port to WebExtensions, our <a href="https://wiki.mozilla.org/Add-ons/developer/communication#Don.27t_See_the_WebExtensions_APIs_You_Need.3F" target="_blank">wiki page</a> provides more information.
+            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication#Don.27t_See_the_WebExtensions_APIs_You_Need.3F">Go there now</a>
         </p>
       </div>
 
       <div class="answer alert alert-warning" role="alert" id="sdk-high" style="display: none">
         <h3>SDK add-on</h3>
-        <p>We think this is an SDK add-on. Please take a look at the comparison chart showing <a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Comparison_with_the_Add-on_SDK" target="_blank">SDK APIs and their WebExtensions counterparts</a>. If you don't see the APIs you need to port to WebExtensions, please click the "More Information" link below to see more options.
-            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication">More Information</a>
+        <p>We think this is an SDK add-on. Please take a look at the comparison chart showing <a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Comparison_with_the_Add-on_SDK" target="_blank">SDK APIs and their WebExtensions counterparts</a>. If you don't see the APIs you need to port to WebExtensions, our <a href="https://wiki.mozilla.org/Add-ons/developer/communication#Don.27t_See_the_WebExtensions_APIs_You_Need.3F" target="_blank">wiki page</a> provides more information.
+            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication#Don.27t_See_the_WebExtensions_APIs_You_Need.3F">Go there now</a>
         </p>
       </div>
 
       <div class="answer alert alert-warning" role="alert" id="xul" style="display: none">
         <h3>XUL or XPCOM add-on</h3>
         <p>
-            We think this add-on is using XUL or XPCOM. Please take a look at the comparison chart showing <a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Comparison_with_XUL_XPCOM_extensions" target="_blank">XUL/XPCOM APIs and their WebExtensions counterparts</a>. If you don't see the APIs you need to port to WebExtensions, please click the "More Information" link below to see more options.
-            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication">More Information</a>
+            We think this add-on is using XUL or XPCOM. Please take a look at the comparison chart showing <a href="https://developer.mozilla.org/en-US/Add-ons/WebExtensions/Comparison_with_XUL_XPCOM_extensions" target="_blank">XUL/XPCOM APIs and their WebExtensions counterparts</a>. If you don't see the APIs you need to port to WebExtensions, our <a href="https://wiki.mozilla.org/Add-ons/developer/communication#Don.27t_See_the_WebExtensions_APIs_You_Need.3F" target="_blank">wiki page</a> provides more information.
+            <a class="btn btn-primary" href="https://wiki.mozilla.org/Add-ons/developer/communication#Don.27t_See_the_WebExtensions_APIs_You_Need.3F">Go there now</a>
         </p>
       </div>
 
@@ -80,7 +80,7 @@
         <h3>Not Found</h3>
         <p>
             We couldn't find your add-on id in our list of add-ons. That just means that we haven't explicitly looked it up for compatibility.
-            <a class="btn btn-primary" role="button" href="https://wiki.mozilla.org/Add-ons/developer/communication#Developers_who_are_affected_by_the_changes">More Information</a>
+            <a class="btn btn-primary" role="button" href="https://wiki.mozilla.org/Add-ons/developer/communication">More Information</a>
         </p>
       </div>
 
